--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     
         <!-- Copyright -->
         <div class="footer-copyright text-center py-3 bg-info">© 2019 Copyright:
-            <a href="https://mdbootstrap.com/education/bootstrap/"> xperts4all</a>
+            <a href="https://xperts4all.netlify.com"> xperts4all</a>
         </div>
         <!-- Copyright -->
     
